<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/settings_category_connection_title" >
		<ListPreference android:entries="@array/connection_types"
		android:entryValues="@array/connection_types_values" android:key="connectionType"
		android:title="Missile Launcher Connection Type" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/settings_category_network_title">
		<EditTextPreference android:dialogTitle="@string/settings_server_host_dialog_title"
			android:dialogMessage="@string/settings_server_host_dialog_message"
			android:title="@string/setting_host_title" android:key="host" />

		<EditTextPreference android:dialogTitle="@string/settings_server_port_dialog_title"
			android:dialogMessage="@string/settings_server_port_dialog_message"
			android:title="@string/setting_port_title" android:key="port"
			android:inputType="number" />
	</PreferenceCategory>
</PreferenceScreen>
